# UMD-SST

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md
.github/: Dockerfile  default-mca-params.conf
bundle/: .gitignore  CMakeLists.txt
cmake/: genericMarine_compiler_flags.cmake
cycling/: cycle.sh
cycling/config/: staticbinit.yaml  var.yaml
src/: CMakeLists.txt
src/genericMarine/: CMakeLists.txt  Traits.h
src/genericMarine/Covariance/: CMakeLists.txt  Covariance.cc  Covariance.h
src/genericMarine/Fields/: CMakeLists.txt  Fields.cc  Fields.h
src/genericMarine/Geometry/: CMakeLists.txt  Geometry.cc  Geometry.h
src/genericMarine/Increment/: CMakeLists.txt  Increment.cc  Increment.h
src/genericMarine/LinearVariableChange/: CMakeLists.txt  LinearVariableChange.h
src/genericMarine/ModelAux/: CMakeLists.txt  ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/genericMarine/State/: CMakeLists.txt  State.cc  State.h
src/genericMarine/VariableChange/: CMakeLists.txt  VariableChange.cc  VariableChange.h
src/mains/: CMakeLists.txt  ConvertState.cc  Dirac.cc  HofX3D.cc  HofXNoModel.cc  MakeObs.cc  StaticBInit.cc  Var.cc
src/oisst/: CMakeLists.txt  Traits.h
src/oisst/Covariance/: CMakeLists.txt  Covariance.cc  Covariance.h
src/oisst/Fields/: CMakeLists.txt  Fields.cc  Fields.h
src/oisst/Geometry/: CMakeLists.txt  Geometry.cc  Geometry.h
src/oisst/GetValues/: CMakeLists.txt  GetValues.cc  GetValues.h  LinearGetValues.cc  LinearGetValues.h
src/oisst/Increment/: CMakeLists.txt  Increment.cc  Increment.h
src/oisst/Model/: CMakeLists.txt  Model.cc  Model.h
src/oisst/ModelAux/: CMakeLists.txt  ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/oisst/State/: CMakeLists.txt  State.cc  State.h
src/umdsst/: CMakeLists.txt  Traits.h
src/umdsst/Covariance/: CMakeLists.txt  Covariance.cc  Covariance.h
src/umdsst/Fields/: CMakeLists.txt  Fields.cc  Fields.h
src/umdsst/Geometry/: CMakeLists.txt  Geometry.cc  Geometry.h
src/umdsst/GetValues/: CMakeLists.txt  GeoVaLsWrapper.f90  GeoVaLsWrapper.h  GeoVaLsWrapperAD.f90  GeoVaLsWrapperAD.h  GetValues.cc  GetValues.h  LinearGetValues.cc  LinearGetValues.h  LocationsWrapper.f90  LocationsWrapper.h
src/umdsst/Increment/: CMakeLists.txt  Increment.cc  Increment.h
src/umdsst/LinearVariableChange/: CMakeLists.txt  LinearVariableChange.h  StdDev.cc  StdDev.h
src/umdsst/ModelAux/: CMakeLists.txt  ModelAuxControl.cc  ModelAuxControl.h  ModelAuxCovariance.cc  ModelAuxCovariance.h  ModelAuxIncrement.cc  ModelAuxIncrement.h
src/umdsst/State/: CMakeLists.txt  State.cc  State.h
src/umdsst/VariableChange/: CMakeLists.txt  Model2GeoVaLs.cc  Model2GeoVaLs.h  VariableChange.cc  VariableChange.h
test/: CMakeLists.txt  CMakeLists.txt_org  test_wrapper.sh
test/Data/: 19850101_regridded_sst.nc  19850101_regridded_sst_1x1.nc  20100101_regridded_sst_0.25x0.25.nc  20120101_regridded_sst_0.25x0.25.nc  landmask.nc  landmask_0.25x0.25.nc  landmask_1x1.nc  obs_sst.nc
test/executables/: TestErrorCovariance.cc  TestGeometry.cc  TestGetValues.cc  TestIncrement.cc  TestLinearGetValues.cc  TestLinearVariableChange.cc  TestModel.cc  TestModelAuxControl.cc  TestModelAuxCovariance.cc  TestModelAuxIncrement.cc  TestState.cc
test/testinput/: dirac.yml  errorcovariance.yml  geometry.yml  getvalues.yml  hofx3d.yml  hofx_nomodel.yml  increment.yml  lineargetvalues.yml  linearvarchange_stddev.yml  model.yml  modelaux.yml  state.yml  staticbinit.yml  var.yml
test/testref/: dirac.ref  dirac_1GridPoint.ref  hofx3d.ref  hofx_nomodel.ref  staticbinit.ref  var.ref
