#include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )

# the source code in this directory,
# all other files are handled through the subdirectory's respective CMakeLists.txt
list( APPEND oisst_src_files
  Traits.h
)

# a convenience frunction to make adding source files from subdirectories easier
# (To keep from having to use the full path every time)
function(oisst_target_sources)
  foreach( src IN LISTS ARGN)
    target_sources(oisst PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/${src})
  endforeach()
endfunction()

# the main library for this interface
ecbuild_add_library( TARGET   oisst
                     SOURCES  ${oisst_src_files}
                     LIBS     ${NETCDF_LIBRARIES}
                              eckit eckit_mpi fckit oops ioda ufo
                     INSTALL_HEADERS LISTED
                     LINKER_LANGUAGE ${OISST_LINKER_LANGUAGE}
                    )

# add source code in the subdirectories
add_subdirectory(Covariance)
add_subdirectory(Geometry)
add_subdirectory(GetValues)
add_subdirectory(Increment)
add_subdirectory(Model)
add_subdirectory(ModelAux)
add_subdirectory(State)